WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165148
Can't download move.simple.com direct deposit transition PDF: Non user-triggered activations of anchors that have a download attribute are ignored
https://bugs.webkit.org/show_bug.cgi?id=165148
Summary
Can't download move.simple.com direct deposit transition PDF: Non user-trigge...
Chris Dumez
Reported
2016-11-29 10:53:53 PST
Can't download move.simple.com direct deposit transition PDF: [Warning] Non user-triggered activations of anchors that have a download attribute are ignored. (app-7d2adbd6a086ab6b1d3f.js, line 65) We are stricter than other browsers as they allow synthetic clicks and it causes compatibility issues.
Attachments
Patch
(5.52 KB, patch)
2016-11-29 13:10 PST
,
Chris Dumez
dbates
: review+
dbates
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-11-29 10:54:12 PST
<
rdar://problem/29421771
>
Chris Dumez
Comment 2
2016-11-29 13:10:10 PST
Created
attachment 295625
[details]
Patch
Daniel Bates
Comment 3
2016-11-29 13:59:52 PST
Comment on
attachment 295625
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295625&action=review
r=me
> Source/WebCore/ChangeLog:10 > + We were ignoring non user-triggered activations of anchors that have a > + download attribute which is stricter than Chrome and Firefox and breaks
Our current behavior conforms to the HTML spec. Have you filed an issue to change the spec? (I haven't checked yet). Unless the spec will be changed before this patch is landed I suggest that we explicitly mention that we are making this change against the spec (citing the date of the spec) for compatibility to match the behavior in the aforementioned other browsers and provide a URL to the WHATWG issue that we filed (or an existing one) to change the spec to align to the behavior we want to adopt.
Chris Dumez
Comment 4
2016-11-29 14:07:09 PST
Filed <
https://github.com/whatwg/html/issues/2116
> against the spec.
Chris Dumez
Comment 5
2016-11-29 14:09:20 PST
(In reply to
comment #4
)
> Filed <
https://github.com/whatwg/html/issues/2116
> against the spec.
I am uncertain about the benefit of adding a comment especially because it will likely be outdated soon.
Chris Dumez
Comment 6
2016-11-29 14:38:47 PST
Committed
r209091
: <
http://trac.webkit.org/changeset/209091
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug